@@ -3,4 +3,4 @@ fckgLite is a WYSIWG editor for Dokuwiki based on the FCKeditor.
 For information on the installation and features of fckgLite, see
 the fckgLite web site:  http://www.mturner.org/fckgLite
 
-See also fcgk/README for additional details.
+See also fckg/README for additional details.
