@@ -26,3 +26,6 @@ $lang['acl_del'] =  "Default (box not checked) allows users with upload permissi
 $lang['auth_ci'] = "The user login id is case insensitive, that is you can login as both USER and user";
 $lang['nix_style'] = "For Windows Servers (Vista and Later).  This setting makes it possible to access data\\media through fckg\\fckeditor\\userfiles, if links to media and file have been successfully created in userfiles";
 $lang['no_symlinks']  = "Disable automatic creation of symbolic links in fckg/userfiles.";            
+$lang['direction'] = 'Set Language direction in FCKeditor:  <b>nocheck</b>: fckgLite will make no changes to the default direction setting; ' 
+                       . ' <b>dokuwiki</b>:  the current Dokuwiki language direction;  <b>ltr</b>: Left-to-right ; <b>rtl</b>: Right-to-left.';
+# $lang['direction_chk'] = "";
